--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/*
 html, body{
   background-color: #FAFAFA;
   font-family: Helvetica, Arial, sans-serif;
@@ -112,7 +113,7 @@ footer p{
   margin-top: 15px;
 }
 
-/* INDEX PAGINA */
+// INDEX PAGINA
 
 nav{
   width: 100%;
@@ -190,3 +191,4 @@ nav ul{
     width: 300px;
   }
 }
+*/
