--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,11 +4,43 @@
 //
 */
 
+#profileheader{
+    margin: 30px 0 50px 0;
+}
 
-.profilePicture{
-    width: 150px;
-    height: 150px;
+#fullname{
+    display: inline;
+    font-size: 1em;
+    font-weight: bold;
+}
+.profilepic img{
+    /*width: 150px;
+    height: 150px;*/
     border-radius: 100%;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.profilestats{
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+
+.profilestats li{
+    padding-right: 40px;
+}
+
+#usernamewrap{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+#usernamewrap h1{
+    margin: 0 20px 0 0;
 }
 
 /*
