--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,7 @@ body{
     text-indent: -30px;
     margin-top: 0px;
 	margin-bottom: 0;
+    text-align: left; /* enkel nodig als zoekbox in het midden staat */
 }
 
 #searchResults img{
@@ -214,7 +215,18 @@ body{
 	margin-bottom: 10px;
 }
 
+/* maakt glyphicons groter */
+nav li a{
+    font-size: 1.5em;
+}
 
+/* centers search in nav */
+nav .navbar-form{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+}
 
 /*
 //
