--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,16 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 body{
 
     background-color: #FAFAFA;
     color: #4b4f54;
 	z-index: -999;
+	font-family: 'Montserrat', sans-serif;
 }
 
+footer{
+	text-align: center;
+}
 /*
 //
 //      PROFILE PAGE
