--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,10 +6,19 @@ body{
     color: #4b4f54;
 	z-index: -999;
 	font-family: 'Montserrat', sans-serif;
+	min-height: 100%;
 }
 
 footer{
 	text-align: center;
+	bottom: 20px;
+	width: 100%;
+	margin-top: 100px;
+}
+/*test class*/
+.problem{
+	background-color: red;
+	color: yellow;
 }
 /*
 //
@@ -390,4 +399,47 @@ nav .navbar-form{
 
 .moreResultsLink a{
 	margin-left: 30px;
+}
+
+
+/*
+//
+//      GALLERY IMAGE GRID
+//
+*/
+.ownContainer{
+	width: 99%;
+	max-width: 930px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.gallery{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+
+	/* plaatsing */
+	/*width: 99%;
+	max-width: 930px;
+	margin-left: auto;
+	margin-right: auto;*/
+}
+
+.gallery__item{
+	display: block;
+	width: 31vw;
+	height: 31vw;
+	max-width: 300px;
+	max-height: 300px;
+	margin-bottom: 10px;
+	//margin-left: 0.1vw;
+	//margin-right: 0.1vw;
+
+	background-color: #ffffff;
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
