--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,13 +247,51 @@ footer{
 //
 */
 
-.navbar{
-    background-color: #fff;
-    border-radius: 0;
+.nav{
+	display: block;
+	width: 100%;
+	padding: 5px 0;
+	background-color: #fff;
+	border-bottom: 1px solid #e7e7e7;
 }
 
-.navbar-brand img{
-    height: 35px;
+.nav__container{
+	width: 97%;
+	margin: auto;
+	max-width: 1150px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.nav__logo{
+	display: block;
+	text-indent: -9999px;
+	width: 25%;
+	max-width: 150px;
+	height: 40px;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center left;
+}
+.nav__links{
+	font-size: 1.5em;
+	display: flex;
+	width: 30%;
+	max-width: 190px;
+	justify-content: space-between;
+}
+.nav__links__item{
+	color: #777;
+	//margin-left: 15px;
+}
+.nav__form{
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	display: block;
+	width: 40%;
+	max-width: 230px;
 }
 
 .hashtagSearch{
@@ -277,18 +315,7 @@ footer{
 	margin-bottom: 10px;
 }
 
-/* maakt glyphicons groter */
-nav li a{
-    font-size: 1.5em;
-}
 
-/* centers search in nav */
-nav .navbar-form{
-    position: absolute;
-    width: 100%;
-    left: 0;
-    text-align: center;
-}
 
 /*
 //
