--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,7 +352,7 @@ footer{
 
 .detailpostHeader{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     margin: 0 0 20px 0;
 }
@@ -371,6 +371,13 @@ footer{
     justify-content: space-between;
     margin: 20px 0 20px 0;
     font-weight: bold;
+}
+
+.post__delete{
+	padding: 0;
+	margin-right: 5px;
+	background-color: transparent;
+	border: 1px solid transparent;
 }
 
 
