--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,11 +236,6 @@ footer{
 	padding-top: 0;
 }
 
-.flagged{
-	padding: 5px;
-	background-color: #ddd;
-}
-
 /*
 //
 //      LOGIN PAGE + SIGN UP PAGE
@@ -401,12 +396,36 @@ footer{
 	border: 1px solid transparent;
 	width: 40px;
 	height: 40px;
+	padding: 5px;
+	outline: none;
 }
+
+.flagged{
+	background-color: #ddd;
+	position: relative;
+}
+
 
 .glyphicon-flag{
 	font-size: 30px;
+	padding: 5px;
 }
 
+.commentsFlag{
+	display: flex;
+	justify-content: flex-end;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	
+}
+
+.commentsFlag--Individual{
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 15px;
+	margin-top: -10px;
+	margin-bottom: 15px;
+}
 
 /*
 //
