--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,6 +137,17 @@ footer{
 	margin-bottom: 25px;
 }
 
+.timelineLocation{
+	margin-left: 62px;
+	margin-top: -27px;
+	font-size: .9em;
+}
+
+.postLocation{
+	margin-left: 54px;
+	margin-top: -22px;
+}
+
 .postHeader{
 	width: 100%;
 	display: flex;
@@ -144,6 +155,7 @@ footer{
 	justify-content: space-between;
 	background-color: #fff;
 	border-bottom: 1px solid #eee;
+	padding-bottom: 10px;
 }
 
 .postUser img{
@@ -157,6 +169,9 @@ footer{
 }
 
 .postUser a{
+	margin-left: 5px;
+	margin-top: 15px;
+	
 	font-size: 1.1em;
 	color: #31618B;
 	font-weight: 300;
@@ -263,6 +278,7 @@ footer{
 	padding: 5px 0;
 	background-color: #fff;
 	border-bottom: 1px solid #e7e7e7;
+	margin-bottom: 25px;
 }
 
 .nav__container{
@@ -272,6 +288,7 @@ footer{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	
 }
 .nav__logo{
 	display: block;
@@ -365,6 +382,11 @@ footer{
     justify-content: space-between;
     align-items: center;
     margin: 0 0 20px 0;
+}
+
+.detailpostHeader a:nth-child(2){
+	position: absolute;
+	margin-top: 3px;
 }
 
 .detailpostRow{
