Comments + Like now work on every page
+css
+redesign

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,115 +371,6 @@ nav .navbar-form{
 
 
 /*
-//
-//      DETAIL POST PAGE
-//
-*/
-/*
-.heart{
-	border: none;
-	outline: none;
-	text-indent: -9999px;
-	background-color: transparent;
-	display: block;
-	height: 37px;
-	width: 37px;
-	background-image: url(../images/heart.svg);
-	background-repeat: no-repeat;
-}
-
-.heart--like{
-	background-image: url(../images/heart-red.svg);
-}
-
-#singlePostImg{
-    display: block;
-    max-width: 100%;
-}
-
-.detailpostHeader img{
-    border-radius: 100%;
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-    margin-right: 15px;
-}
-
-.detailpostHeader{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0 20px 0;
-}
-
-.detailpostHeader a:nth-child(2){
-	position: absolute;
-	margin-top: 3px;
-}
-
-.detailpostRow{
-	margin-top: 25px;
-    max-width: 640px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    background-color: #fff;
-    padding: 20px 0 20px 0
-}
-
-.detailpostLikesAndTime{
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0 20px 0;
-    font-weight: bold;
-}
-
-.post__delete{
-	padding: 0;
-	margin-right: 5px;
-	background-color: transparent;
-	border: 1px solid transparent;
-}
-
-.post__flag{
-	margin-right: 5px;
-	background-color: transparent;
-	border: 1px solid transparent;
-	width: 40px;
-	height: 40px;
-	padding: 5px;
-	outline: none;
-}
-
-.flagged{
-	background-color: #ddd;
-	position: relative;
-}
-
-
-.glyphicon-flag{
-	font-size: 30px;
-	padding: 5px;
-}
-
-.commentsFlag{
-	display: flex;
-	justify-content: flex-end;
-	margin-right: 10px;
-	margin-bottom: 10px;
-	
-}
-
-.commentsFlag--Individual{
-	display: flex;
-	justify-content: flex-end;
-	padding-right: 15px;
-	margin-top: -10px;
-	margin-bottom: 15px;
-}*/
-
-
-/*
 	//
 	// CUSTOM CONTAINER
 	//
@@ -607,6 +498,8 @@ nav .navbar-form{
 	margin-right: 5px;
 	background-color: transparent;
 	border: 1px solid transparent;
+	position: absolute;
+	top: 70px;
 }
 
 .post__flag{
@@ -644,6 +537,9 @@ nav .navbar-form{
 	padding-right: 15px;
 	margin-top: -10px;
 	margin-bottom: 15px;
+
+	position: absolute;
+	top: 30px;
 }
 
 /*
@@ -773,35 +669,8 @@ nav .navbar-form{
 }​
 
 
- /*
- //
- //      COMMENT SECTION
- //
- */
-/*.comments{
-	margin: 0 0 15px 0;
- }
-
-.comments ul{
-	list-style: none;
- }
-
-.comments__list{
-	list-style: none;
-	padding: 0;
-	margin: 15px 0 25px 0;
- }
-
- .comments__list__item{
-
- }*/
-
 @media only screen and (min-width: 400px){
 	#searchResults{
 		left: 0%;
 	}
-}
-
-.hideMe{
-	display: none;
 }
