--- a/public/css/style.css
+++ b/public/css/style.css
@@ -298,8 +298,45 @@ footer{
 //
 */
 
+.background--full{
+	display: block;
+	width: 100vw;
+	height: 100vh;
+	background-image: url(https://images.unsplash.com/photo-1440613905118-99b921706b5c?crop=entropy&fit=crop&fm=jpg&h=900&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925);
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-top: 10vh;
+}
 
+.form--login{
+	background-color: #fff;
+	width: 90%;
+	max-width: 360px;
+	padding: 20px 15px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 4px;
+}
 
+.form--login__logo{
+	display: block;
+	width: 100%;
+	height: 80px;
+	margin-bottom: 20px;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
+
+.form--login__tagline{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.form--login__btn{
+	width: 100%;
+}
 /*
 //
 //      EDIT PROFILE PAGE
@@ -561,6 +598,7 @@ nav .navbar-form{
 	border: 1px solid transparent;
 	position: absolute;
 	top: 70px;
+	left: 40px;
 }
 
 .post__flag{
@@ -600,7 +638,8 @@ nav .navbar-form{
 	margin-bottom: 15px;
 
 	position: absolute;
-	top: 30px;
+	top: 80px;
+	left: 150px;
 }
 
 /*
