--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,11 +17,21 @@ a:hover{
 	text-decoration: none;
 }
 
+.footerWrap{
+	text-align: center;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 10px;
+	width: 100%;
+	height: 20px;
+}
+
 footer{
 	text-align: center;
-	bottom: 20px;
+	bottom: 10px;
 	width: 100%;
-	margin-top: 100px;
+	height: 20px;
 }
 /*test class*/
 .problem{
