--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ body{
     color: #4b4f54;
 	z-index: -999;
 	font-family: 'Montserrat', sans-serif;
-	min-height: 100%;
+	min-height: 100vh;
 }
 .container{
 	margin-bottom: 70px;
@@ -17,22 +17,25 @@ a:hover{
 	text-decoration: none;
 }
 
-.footerWrap{
+footer{
 	text-align: center;
-	position: absolute;
-	right: 0;
-	left: 0;
-	bottom: 10px;
-	width: 100%;
+	width: 90%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+footer, .push{
 	height: 20px;
 }
 
-footer{
-	text-align: center;
+.footerWrap{
+	position: absolute;
 	bottom: 10px;
 	width: 100%;
-	height: 20px;
 }
+
 /*test class*/
 .problem{
 	background-color: red;
@@ -316,6 +319,21 @@ footer{
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding-top: 10vh;
+	
+}
+
+.page--wrap{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -30px;
+}
+
+.page--wrap__welcome{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -40px;
 }
 
 .form--login{
@@ -326,6 +344,7 @@ footer{
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 4px;
+	margin-bottom: 50px;
 }
 
 .form--login__logo{
@@ -752,8 +771,10 @@ nav .navbar-form{
 .ownContainer{
 	width: 99%;
 	max-width: 930px;
+	margin-bottom: 50px;
 	margin-left: auto;
 	margin-right: auto;
+	height: 100%;
 }
 
 .gallery{
@@ -813,12 +834,13 @@ nav .navbar-form{
 	-webkit-animation:blink normal 2s infinite ease-in-out; /* Webkit */
 	-ms-animation:blink normal 2s infinite ease-in-out; /* IE */
 	animation:blink normal 2s infinite ease-in-out; /* Opera and prob css3 final iteration */
-}​
+}
 
 
-@media only screen and (min-width: 400px){
+@media (min-width: 400px){
 	#searchResults{
-		left: 0%;
+		position: relative;
+		left: 5%;
 	}
 }
 
