Load & show more + flag & delete
Bug fixes voor load & show more en flag & delete
Flag & delete werkten niet samen met load & show voor nieuwe posts. Nu
wel.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,10 +327,10 @@ footer, .push{
 	margin-left: auto;
 	margin-right: auto;
 	overflow: hidden;
+	cursor: pointer;
 }
 .circle {
   position: relative;
-  overflow: hidden;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -350,7 +350,6 @@ footer, .push{
 }
 .circle:hover {
   animation: border .3s ease 1 forwards;
-  cursor: none;
 }
 .circle:hover .loadmore, .loadmorePosts {
   opacity: 1;
