--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,7 +345,7 @@ footer, .push{
   color: #31618B;
   text-align: center;
   text-transform: uppercase;
-  font: 18px sans-serif;
+  //font: 18px sans-serif;
   transition: opacity .2s ease;
 }
 .circle:hover {
