Made footer readable on login/signup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,11 @@ footer, .push{
 	width: 100%;
 }
 
+.footer--login{
+	color: #fff;
+	text-shadow: 1px 1px #000;
+}
+
 /*test class*/
 .problem{
 	background-color: red;
